--- a/site/src/pages/adm/adm-pedidos-concluidos/index.scss
+++ b/site/src/pages/adm/adm-pedidos-concluidos/index.scss
@@ -57,4 +57,43 @@
     #search button:active {
         transform: translateY(-1px);
     }
+
+    #tabela {
+        display: flex;
+        flex-direction: column;
+        width: 948px;
+        height: 450px;
+        border: 1px solid;
+        margin-top: 50px;
+        padding: 5px 0px 0px 0px;
+    }
+
+    #tabela table {
+        border-collapse: collapse;
+        width: 100%;
+        height: 300px;
+    }
+
+    .tablehead {
+        border-top: 1px solid #000;
+        border-bottom: 1px solid #000;
+        height: 40px;
+        margin: 20px 0px;
+    }
+
+    .tablebody {
+        height: 100%;
+        overflow-y: scroll;
+    }
+    
+    .tablebody tr {
+        border-top: 1px solid #000;
+        border-bottom: 1px solid #000;
+        margin-bottom: 10px;
+    }
+
+    .tablebody td {
+        text-align: center;
+        height: 40px;
+    }
 }
