--- a/site/src/pages/site/cartoespag/cartoes.scss
+++ b/site/src/pages/site/cartoespag/cartoes.scss
@@ -8,7 +8,8 @@ width: 100vw;
         #esquerda{
             display: flex;
             flex-direction: column;
-            padding: 40px 0px 0px 20px;          
+            padding: 40px 0px 0px 20px;  
+            border: solid 1px;        
 
             #User{
               display: flex;
@@ -42,7 +43,7 @@ width: 100vw;
 
             #Mconta{
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
                 align-items: center;
 
                 #Mcontapri{
@@ -50,6 +51,12 @@ width: 100vw;
                     flex-direction: row;
                     align-items: center;
                     justify-content: center;
+
+                    p{
+                        font: 20px 'inter';
+                        margin-left: 10px;
+                    }
+
                     img{
                         height: 55px;
                         width: 55px;
@@ -57,13 +64,37 @@ width: 100vw;
     
                     }
     
-                    p{
-                        font-family: 50px 'inter';
-    
-                    }
+
 
                 }
+                
 
+                #Mcontasec{
+                    display: flex;
+                    flex-direction: column;
+                    
+                    #marcado{
+                        text-decoration: underline 1px ;
+                        width: 20px;
+
+                    }
+                    
+
+                    a{
+                        text-decoration: none;
+                        color: black;
+                        margin-left: 40px;
+                        font: 19px 'inter';
+                        display: none ;
+                        
+                    }
+
+
+
+                }
+                
+                
+        
             }
 
         }
