--- a/site/src/pages/adm/adm-pedidos-andamentoi/index.scss
+++ b/site/src/pages/adm/adm-pedidos-andamentoi/index.scss
@@ -104,4 +104,11 @@
         text-align: center;
         height: 40px;
     }
+
+    .tablebody button {
+        background-color: transparent;
+        border: none;
+        outline: none;
+        cursor: pointer;
+    }
 }
