--- a/site/src/pages/adm/adm-pedidos-andamento/index.scss
+++ b/site/src/pages/adm/adm-pedidos-andamento/index.scss
@@ -1,6 +1,7 @@
-.adm-pagina-pedidos-concluidos {
+.adm-pagina-pedidos-andamento {
     display: flex;
     flex-direction: row;
+    height: 100vh;
 
     .corp {
         display: flex;
