--- a/site/src/pages/adm/adm-pedidos-concluidos/index.scss
+++ b/site/src/pages/adm/adm-pedidos-concluidos/index.scss
@@ -1,6 +1,7 @@
 .adm-pagina-pedidos-concluidos {
     display: flex;
     flex-direction: row;
+    height: 100vh;
 
     .corp {
         display: flex;
