Pagina de Cartões Feita!

--- a/site/src/components/adm/menubar/index.scss
+++ b/site/src/components/adm/menubar/index.scss
@@ -28,8 +28,10 @@
         background-color: transparent;
         font: 16px "Inter";
         color: #5E5E5E;
-        border: none;        
+        background-color: transparent;
+        border: none;  
     }
+    
     #adm-profile button:hover {
         text-decoration: underline;
         cursor: pointer;
