--- a/site/src/components/site/usermenu/index.scss
+++ b/site/src/components/site/usermenu/index.scss
@@ -44,6 +44,7 @@
         color: #383838;
         border: none;
         outline: none;
+        background-color: transparent;
         cursor: pointer;
     }
 
