--- a/site/src/pages/site/telacartoes/index.scss
+++ b/site/src/pages/site/telacartoes/index.scss
@@ -36,6 +36,11 @@
     }
 
     #btadd {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
         width: 234px;
         height: 39px;
         border-radius: 2px;
