--- a/site/src/components/site/itens-carrinho/index.scss
+++ b/site/src/components/site/itens-carrinho/index.scss
@@ -10,12 +10,13 @@
     #imgtotal{
         display: flex;
         align-items: center;
+        width: 32vw;
     }
 
     #img{
         padding: 50px;
         border: 1px solid black;
-        margin: 0px;
+        margin: 0px 30px 0px 0px;
 
     }
 
