--- a/site/src/components/site/itens-carrinho/index.scss
+++ b/site/src/components/site/itens-carrinho/index.scss
@@ -7,17 +7,21 @@
     align-items: center;
     justify-content: space-between;
 
+    #number{
+        font-size: 20px;
+    }
+
     #imgtotal{
         display: flex;
         align-items: center;
         width: 32vw;
+        font-size: 20px;
     }
 
     #img{
         padding: 50px;
         border: 1px solid black;
         margin: 0px 30px 0px 0px;
-
     }
 
     .quant {
@@ -26,14 +30,18 @@
     }
     
     .quant *{
-        padding: 0px 4px;
+        font-size: 20px;
+        align-items: center;
+        text-align: center;
+        padding: 0px 10px;
         border: 1px solid black;
-        background-color: rgb(241, 241, 241);
+        background-color: rgb(255, 255, 255);
     }
 
     .exclusao{
         background-color: white;
         border: 0px;
+        font-size: 20px;
     }
     
 }
