--- a/site/src/pages/site/carrinho/index.scss
+++ b/site/src/pages/site/carrinho/index.scss
@@ -8,6 +8,7 @@
         border: 1px solid black;
         justify-content: space-between;
         align-items: center;
+        width: 100vw;
 
         #pr{
             width: 35vw;
@@ -25,6 +26,7 @@
         flex-direction: row;
         display: flex;
         margin: 30px 0px;
+        justify-content: space-between;
         
         .left{
             display: flex;
@@ -39,12 +41,34 @@
             }
 
             #grande{
+                margin: 0px 15px;
                 font-size: 30px;
             }
         }
 
         .right{
+            display: flex;
+            flex-direction: row;
+            align-items: center;
 
+            #right{
+                font-size: 20px;
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+            }
+
+            #grande{
+                font-size: 30px;
+            }
+
+            #bottom{
+                font-size: 30px;
+                padding: 8px 40px;
+                border-radius: 15px;
+                border: 1px solid black;
+                margin: 0px 40px;
+            }
         }
     }
 }
