--- a/site/src/pages/site/tela-produto/index.scss
+++ b/site/src/pages/site/tela-produto/index.scss
@@ -5,6 +5,7 @@
         gap: 60px;
         position: relative;
         top: 30px;
+        height: 530px;
     }
 
     .esq {
@@ -99,8 +100,40 @@
         font: 16px "Inter";
     }
 
-    #txt-light {
+    .txt-light {
         color: #8e8e8e;
     }
 
+    .dir-linha-seguranca {
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        gap: 7.5px;
+        margin-top: 10px;
+    }
+
+    .txt-column {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .descrição {
+        display: flex;
+        align-items: center;
+        font: 24px "Inter";
+        font-weight: 600;
+    
+        #linha{
+            height: 1px;
+            width: 300px;
+            margin: 0px 40px;
+            border: 2px solid #3B3B3B;
+        }
+    }
+
+    .topicos {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
