--- a/site/src/components/site/user-register/index.scss
+++ b/site/src/components/site/user-register/index.scss
@@ -129,4 +129,17 @@
 
 .janela-open {
     overflow: hidden; /* Impede a rolagem da página de fundo quando o modal está aberto */
+    // pointer-events: none;
+}
+
+.shadow {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    background: #686868c4;
+    z-index: 999;
+    cursor: pointer;
 }
