--- a/site/src/pages/site/telacartoes/index.scss
+++ b/site/src/pages/site/telacartoes/index.scss
@@ -8,115 +8,39 @@
         flex-direction: row;
     }
 
-    #bodycenter {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
-        margin-top: 40px;
-        padding: 20px;
-    }
-
-    #leftside {
-        position: relative;
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-    }
-
-    #bodycenter > h1 {
-        font: 36px "Inter";
-        color: #000;
-    }
-
-    #bodycenter > div {
+    .corp > article {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
-        align-items: center;
+        padding: 20px 40px;
+        flex-grow: 1;
     }
 
-    #btadd {
+    .leftside {
         display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        text-decoration: none;
-        width: 234px;
-        height: 39px;
-        border-radius: 2px;
-        background-color: transparent;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        border: 1px solid #000;
-        font: 20px "Inter";
-        color: #000;
-        margin-right: 10px;
+        flex-direction: column;
     }
 
-    #leftside h1 {
-        font: 20px "Inter";
-        font-weight: 400;
-        margin: 5px 0px;
-        color: #000;
+    .leftside > h1 {
+        font: 30px "Inter";
+        font-weight: regular;
+        margin: 0px 0px 20px 0px;
     }
 
     .cartaoblock {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        width: 403px;
-        height: 145px;
-        border: 1px solid #000;
-        border-radius: 5px;
-        padding: 5px 10px;
-        border-left: 13px solid #404040;
-        margin: 10px 5px;
+        width: 420px;
+        min-height: 133px;
+        border: 1px solid #404040;
+        padding: 10px;
+        border-radius: 2px;
     }
 
-    .cartaoblock h1 {
-        font: 20px "Inter";
-        color: #000;
-    }
-
-    .cartaoblock h3 {
-        font: 14px "Inter";
-        color: #383838;
-    }
-
-    #cartaoimg {
-        width: 149px !important;
-        height: 94px !important;
-        border-radius: 5px;
-        margin: 10px 20px 10px 10px;
-    }
-    
     .cartaoblock > div {
         display: flex;
         flex-direction: row;
     }
-
-    #leftside button {
-        position: absolute;
-        width: 17px;
-        height: 17px;
-        background-color: transparent;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        align-self: flex-end;
-        transition: 0.3s;
-        bottom: 20px;
-    }
-
-    #leftside button:hover {
-        animation: shake 1s ease-in-out infinite;
-    }
-
-    #leftside button:active {
-        animation: up 0.3s ease-in-out 1;
-     }
 
     @keyframes shake {
         0% { transform: rotateZ(0); }
