--- a/site/src/pages/site/telausuario/index.scss
+++ b/site/src/pages/site/telausuario/index.scss
@@ -46,6 +46,11 @@
         border-radius: 3px;
         margin-top: 40px;
         cursor: pointer;
+        transition: 0.3s;
+    }
+
+    #sideleft  button:hover {
+        transform: translateY(-3px);
     }
 
     #blocks {
@@ -66,8 +71,9 @@
         display: flex;
         flex-direction: column;
         justify-content: center;
-        font: 24px "Inter";
+        font: 20px "Inter";
         font-weight: 500;
+        text-align: end;
         color: #383838;
         height: 43px;
     }
@@ -75,7 +81,7 @@
     #sideleft input {
         width: 394px;
         height: 43px;
-        border: 1px solid #000;
+        border: 1px solid #383838;
         background-color: transparent;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
         border-radius: 3px;
@@ -115,5 +121,10 @@
         border-radius: 3px;
         margin-top: 40px;
         cursor: pointer;
+        transition: 0.3s;
+    }
+
+    #sideright button:hover {
+        transform: translateY(-3px);
     }
 }
