--- a/site/src/pages/site/carrinho/index.scss
+++ b/site/src/pages/site/carrinho/index.scss
@@ -36,8 +36,9 @@
 
             .img{ 
                 margin: 0px 10px;
-                padding: 20px  20px;
+                width: 41px;
                 border: 1px solid black;
+                
             }
 
             #grande{
@@ -59,6 +60,7 @@
             }
 
             #grande{
+                margin-left: 10px;
                 font-size: 30px;
             }
 
