--- a/site/src/pages/site/tela-produto/index.scss
+++ b/site/src/pages/site/tela-produto/index.scss
@@ -131,9 +131,40 @@
         }
     }
 
+    .sec-mid {
+        height: 240px;
+    }
+
     .topicos {
         display: flex;
         flex-direction: column;
+        margin: 10px;
+        font-size:  16px;
+    }
+
+    .sec-mid-bottom {
+        display: flex;
         align-items: center;
+    }
+
+    .separador {
+        display: flex;
+        flex-direction: row;
+        font-size: 36px;
+        font-weight: 300;
+
+        #linha {
+            height: 1px;
+            width: 400px;
+            margin: 24px 40px;
+            border: 2px solid #3b3b3b;
+        }
+    }
+
+    .sec-bottom {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
     }
 }
