--- a/site/src/pages/site/telacartoes/index.scss
+++ b/site/src/pages/site/telacartoes/index.scss
@@ -20,6 +20,22 @@
         display: flex;
         flex-direction: column;
         overflow-y: scroll;
+        height: 598px;
+        padding: 0px 10px 0px 0px;
+    }
+
+    .leftside::-webkit-scrollbar {
+        width: 5px;
+    }
+      
+    .leftside::-webkit-scrollbar-track {
+        background: transparent;
+    }
+      
+    .leftside::-webkit-scrollbar-thumb {
+        background-color: rgb(88, 88, 88);
+        border-radius: 20px;
+        border: none;
     }
 
     .leftside > h1 {
@@ -36,6 +52,7 @@
         border: 1px solid #404040;
         padding: 10px;
         border-radius: 2px;
+        margin-bottom: 20px;
     }
 
     .cartaoblock > div {
@@ -98,18 +115,74 @@
         flex-direction: column;
         flex-grow: 1;
         align-items: center;
+        margin-left: 20px;
     }
 
-    .rightside > button {
-        width: 295px;
-        height: 43px;
+    .rightside > a {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        text-decoration: none;
+        width: 200px;
+        height: 40px;
         border-radius: 3px;
         background-color: transparent;
-        font: 24px "Inter";
+        font: 20px "Inter";
         color: #383838;
         border: 1px solid #383838;
         outline: none;
         margin: 0px 0px 20px 0px;
         cursor: pointer;
+    }
+
+    .cartaoselected  {
+        display: flex;
+        flex-direction: row;
+    }
+
+    .cartaoselected > img {
+        width: 262px;
+        height: 165px;
+        border-radius: 13px;
+        border: none;
+        box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.25);
+        margin-right: 10px;
+    }
+    .cartaoselected div {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+        height: 100%;
+        justify-content: center;
+    }
+
+    .cartaoselected h1 {
+        font: 20px "Inter";
+        width: 236px;
+    }
+
+    .cartaoselected h3 {
+        font: 14px "Inter";
+        width: 236px;
+    }
+
+    .cartaoselected button {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        width: 40px;
+        height: 18px;
+        background-color: transparent;
+        color: #4584FF;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        text-decoration: none;
+    }
+
+    .cartaoselected button:hover {
+        text-decoration: underline;
     }
 }
