--- a/site/src/pages/site/carrinho/index.scss
+++ b/site/src/pages/site/carrinho/index.scss
@@ -38,12 +38,14 @@
                 margin: 0px 10px;
                 width: 41px;
                 border: 1px solid black;
-                
+                cursor: pointer;
             }
 
             #grande{
                 margin: 0px 15px;
-                font-size: 30px;
+                font: 26px "Inter";
+                font-weight: 100;
+                color: #3D3D3D;
             }
         }
 
@@ -53,7 +55,8 @@
             align-items: center;
 
             #right{
-                font-size: 20px;
+                font: 22px "Inter";
+                font-weight: 100;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
@@ -61,15 +64,19 @@
 
             #grande{
                 margin-left: 10px;
-                font-size: 30px;
+                font: 26px "Inter";
+                font-weight: 100;
             }
 
             #bottom{
-                font-size: 30px;
-                padding: 8px 40px;
+                font: 26px "Inter";
+                font-weight: 100;
+                color: #3D3D3D;
+                padding: 8px 30px;
                 border-radius: 15px;
-                border: 1px solid black;
+                border: 1px solid #404040;
                 margin: 0px 40px;
+                cursor: pointer;
             }
         }
     }
