--- a/site/src/pages/site/carrinho/index.scss
+++ b/site/src/pages/site/carrinho/index.scss
@@ -38,14 +38,12 @@
                 margin: 0px 10px;
                 width: 41px;
                 border: 1px solid black;
-                cursor: pointer;
+                
             }
 
             #grande{
                 margin: 0px 15px;
-                font: 26px "Inter";
-                font-weight: 100;
-                color: #3D3D3D;
+                font-size: 30px;
             }
         }
 
@@ -55,8 +53,7 @@
             align-items: center;
 
             #right{
-                font: 22px "Inter";
-                font-weight: 100;
+                font-size: 20px;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
@@ -64,19 +61,15 @@
 
             #grande{
                 margin-left: 10px;
-                font: 26px "Inter";
-                font-weight: 100;
+                font-size: 30px;
             }
 
             #bottom{
-                font: 26px "Inter";
-                font-weight: 100;
-                color: #3D3D3D;
-                padding: 8px 30px;
+                font-size: 30px;
+                padding: 8px 40px;
                 border-radius: 15px;
-                border: 1px solid #404040;
+                border: 1px solid black;
                 margin: 0px 40px;
-                cursor: pointer;
             }
         }
     }
