--- a/site/src/components/site/itens-carrinho/index.scss
+++ b/site/src/components/site/itens-carrinho/index.scss
@@ -17,6 +17,13 @@
         width: 32vw;
         font-size: 20px;
     }
+    
+    // #im{ 
+    //     margin: 0px 10px;
+    //     height: 41px;
+    //     border: 1px solid black;
+    //     cursor: pointer;
+    // }
 
     #img{
         padding: 50px;
