--- a/site/src/pages/site/carrinho/index.scss
+++ b/site/src/pages/site/carrinho/index.scss
@@ -5,7 +5,8 @@
         display: flex;
         flex-direction: row;
         margin-top: 50px;
-        border: 1px solid black;
+        border-top: 1px solid #404040;
+        border-bottom: 1px solid #404040;
         justify-content: space-between;
         align-items: center;
         width: 100vw;
@@ -22,7 +23,8 @@
     }
 
     .total{
-        border: 1px solid black;
+        border-top: 1px solid #404040;
+        border-bottom: 1px solid #404040;
         flex-direction: row;
         display: flex;
         margin: 30px 0px;
@@ -38,12 +40,14 @@
                 margin: 0px 10px;
                 width: 41px;
                 border: 1px solid black;
-                
+                cursor: pointer;
             }
 
             #grande{
                 margin: 0px 15px;
-                font-size: 30px;
+                font: 26px "Inter";
+                font-weight: 100;
+                color: #3D3D3D;
             }
         }
 
@@ -53,7 +57,8 @@
             align-items: center;
 
             #right{
-                font-size: 20px;
+                font: 22px "Inter";
+                font-weight: 100;
                 display: flex;
                 flex-direction: row;
                 align-items: center;
@@ -61,15 +66,19 @@
 
             #grande{
                 margin-left: 10px;
-                font-size: 30px;
+                font: 26px "Inter";
+                font-weight: 100;
             }
 
             #bottom{
-                font-size: 30px;
-                padding: 8px 40px;
-                border-radius: 15px;
-                border: 1px solid black;
+                font: 26px "Inter";
+                font-weight: 100;
+                color: #3D3D3D;
+                padding: 8px 30px;
+                border-radius: 6px;
+                border: 1px solid #404040;
                 margin: 0px 40px;
+                cursor: pointer;
             }
         }
     }
