--- a/site/src/components/site/itens-carrinho/index.scss
+++ b/site/src/components/site/itens-carrinho/index.scss
@@ -2,32 +2,33 @@
     margin: 50px 0px;
     width: 100vw;
     padding: 25px ;
-    border: 1px solid black;
+    border-bottom: 1px solid #404040;
+    border-top: 1px solid #404040;
     display: flex;
     align-items: center;
     justify-content: space-between;
 
     #number{
-        font-size: 20px;
+        font: 20px "Inter";
     }
 
     #imgtotal{
         display: flex;
         align-items: center;
         width: 32vw;
-        font-size: 20px;
+        font: 20px "Inter";
     }
-    
-    // #im{ 
-    //     margin: 0px 10px;
-    //     height: 41px;
-    //     border: 1px solid black;
-    //     cursor: pointer;
-    // }
+
+    #imgtotal input[type="checkbox"] {
+        width: 41px;
+        height: 41px;
+        margin-right: 30px;
+        cursor: pointer;
+    }
 
     #img{
         padding: 50px;
-        border: 1px solid black;
+        border: 1px solid #868686;
         margin: 0px 30px 0px 0px;
     }
 
@@ -36,19 +37,37 @@
         flex-direction: row;
     }
     
-    .quant *{
-        font-size: 20px;
+    .quant * {
+        display: flex;
+        flex-direction: row;
+        font: 20px "Inter";
+        color: #4F4F4F;
         align-items: center;
-        text-align: center;
-        padding: 0px 10px;
-        border: 1px solid black;
-        background-color: rgb(255, 255, 255);
+        justify-content: center;
+        border: 1px solid #9C9C9C;
+        background-color: transparent;
+    }
+
+    .block {
+        width: 38px;
+        height: 38px;
+        cursor: pointer;
+    }
+
+    #block2 {
+        width: 59px;
+        height: 38px;
     }
 
     .exclusao{
         background-color: white;
         border: 0px;
         font-size: 20px;
+        cursor: pointer;
     }
+
     
+    .exclusao:hover {
+        text-decoration: underline;
+    }
 }
