--- a/site/src/pages/site/carrinho/index.scss
+++ b/site/src/pages/site/carrinho/index.scss
@@ -10,6 +10,9 @@
         justify-content: space-between;
         align-items: center;
         width: 100vw;
+        font: 20px "Inter";
+        font-weight: 500;
+        color: #3D3D3D;
 
         #pr{
             width: 35vw;
