--- a/site/src/pages/adm/adm-central/index.scss
+++ b/site/src/pages/adm/adm-central/index.scss
@@ -2,4 +2,9 @@
     display: flex;
     flex-direction: row;
     width: 100vw;
+
+    .umdois {
+        width: 200px;
+        height: 300px;
+    }
 }
