--- a/site/src/pages/site/tela-produto/index.scss
+++ b/site/src/pages/site/tela-produto/index.scss
@@ -166,5 +166,6 @@
         flex-direction: row;
         align-items: center;
         justify-content: center;
+        margin-bottom: 10vh;
     }
 }
