começando a pagina de market, não consegui fazer muita coisa pq tive q resolver varias coisas aq em casa, foi mal

--- a/site/src/pages/site/market/index.scss
+++ b/site/src/pages/site/market/index.scss
@@ -1,4 +1,18 @@
 .pagina-market {
     display: flex;
+    flex-direction: column;
+}
+
+.banner {
+    height: 10vh;    
+}
+
+.esq {
+    display: flex;
+    flex-direction: column;
+}
+
+.checkbox {
+    display: flex;
     flex-direction: row;
 }
