--- a/site/src/components/site/user-register/index.scss
+++ b/site/src/components/site/user-register/index.scss
@@ -120,6 +120,22 @@
         padding: 5px 10px;
         cursor: pointer;
     }
+
+    #passwordbox {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+    }
+
+    #passwordbox input {
+        width: 20px !important;
+        height: 20px !important;
+        cursor: pointer;
+    }
+
+    #passwordbox label {
+        font: 15px "Inter";
+    }
 }
 
 .register-user.active {
