ajustes em diversas págin, sistema de login Feito!

--- a/site/src/pages/site/telausuario/index.scss
+++ b/site/src/pages/site/telausuario/index.scss
@@ -127,4 +127,16 @@
     #sideright button:hover {
         transform: translateY(-3px);
     }
+
+    #btsvsc {
+        display: flex;
+        flex-direction: row;
+        align-self: center;
+        gap: 20px;
+    }
+
+    #sairbt {
+        width: 150px !important;
+        font: 18px "Inter" !important;
+    }
 }
