--- a/site/src/components/adm/menubar/index.scss
+++ b/site/src/components/adm/menubar/index.scss
@@ -5,6 +5,7 @@
     flex-direction: column;
     align-items: center;
     width: 269px;
+    height: 100vh !important;
     box-shadow: 6px 0px 8px 0px rgba(0, 0, 0, 0.2);
     padding: 20px;
 
