Sistema de foto adicionado! Aplicado ao cabecalho

--- a/site/src/components/site/cabecalho/index.scss
+++ b/site/src/components/site/cabecalho/index.scss
@@ -108,4 +108,12 @@
     #navegation-bar a:hover {
         color: #666666;
     }
+
+    #ftuser {
+        border-radius: 100%;
+        width: 49px;
+        height: 49px;
+        margin-bottom: 5px;
+        border: 1px solid #2b2b2b;
+    }
 }
