--- a/site/src/components/adm/menubar/index.scss
+++ b/site/src/components/adm/menubar/index.scss
@@ -5,7 +5,8 @@
     flex-direction: column;
     align-items: center;
     width: 269px;
-    height: 100vh !important;
+    height: 100vh;
+    z-index: 9999;
     box-shadow: 6px 0px 8px 0px rgba(0, 0, 0, 0.2);
     padding: 20px;
 
