--- a/site/src/pages/adm/adm-cadastro-produto/index.scss
+++ b/site/src/pages/adm/adm-cadastro-produto/index.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     width: 100vw;
-    height: 100vh !important;
+    height: 100vh;
 
     .corp {
         display: flex;
