--- a/site/src/components/site/usermenu/index.scss
+++ b/site/src/components/site/usermenu/index.scss
@@ -24,7 +24,8 @@
     #usericonchange h1 {
         font: 30px "Inter";
         font-weight: 500;
-        text-align: center;
+        text-align: start;
+        padding: 0px 20px;
         width: 150px;
     }
 
