tenta aí indiano

--- a/site/src/pages/site/telacartoes/index.scss
+++ b/site/src/pages/site/telacartoes/index.scss
@@ -197,8 +197,8 @@
         .reponsive{
             display: none;
         }
-        .reponsive{
-            display: block;
+        .corp{
+            display: none;
         }
     }
 }
