--- a/site/src/components/site/cabecalho/index.scss
+++ b/site/src/components/site/cabecalho/index.scss
@@ -26,7 +26,7 @@
         flex-direction: row;
         border-bottom: 2px solid #3D3D3D;
         border-radius: 3px;
-        width: 280px;
+        width: 20vw;
     }
 
     #search button {
