ajuste select user

--- a/site/src/components/site/usermenu/index.scss
+++ b/site/src/components/site/usermenu/index.scss
@@ -4,7 +4,7 @@
     width: 335px;
     height: 598px;
     padding: 5px 20px;
-    margin-top: 40px;
+    margin: 40px 0px 40px 0px;
     gap: 40px;
     border-right: 2px solid #383838;
 
