--- a/site/src/pages/site/telacartoes/index.scss
+++ b/site/src/pages/site/telacartoes/index.scss
@@ -187,6 +187,19 @@
 
     
 
+    @media (min-width: 2020px) {
+        .reponsive{
+            display: none;
+        }
+
+        .corp{
+            #resp{
+                display: none;
+            }
+        }
+    }
+
+
     @media (max-width: 2020px) {
         .reponsive{
             display: none;
