--- a/site/src/components/site/cabecalho/index.scss
+++ b/site/src/components/site/cabecalho/index.scss
@@ -165,7 +165,17 @@
             display: none;
         }
     }
-
+    @media(max-width: 1258px) {
+        .sombra{
+            display: flex;
+            flex-direction: row;
+            flex-wrap: nowrap;
+            align-items: center;
+            justify-content: space-between;
+            gap: 25px;
+            box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+        }
+    }
       
 }
 
