--- a/site/src/pages/site/pedidoproduto/index.scss
+++ b/site/src/pages/site/pedidoproduto/index.scss
@@ -115,6 +115,16 @@
         font-weight: 200;
     }
 
+    #img_confirm {
+        width: 34px;
+        height: 34px;
+        background-color: #D9D9D9;
+        border-radius: 100%; 
+        margin: 10px 0px;
+        border: none;
+        border-radius: 100%;
+    }
+
     .ball {
         width: 34px;
         height: 34px;
