--- a/site/src/components/site/resp-usermenu/index.scss
+++ b/site/src/components/site/resp-usermenu/index.scss
@@ -9,12 +9,13 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: flex-start;
         margin: 20px;
     }
 
     #usericonchange > img {
-        width: 50px !important;
-        height: 50px;
+        width: 90px !important;
+        height: 90px;
         margin: 0px;
         border-radius: 100%;
         border: 1px solid;
@@ -51,8 +52,9 @@
     .opcoes{
         display: flex;
         flex-direction: row;
-        justify-content: space-around;
+        justify-content: space-between;
 
+        
     #selectbox {
         display: flex;
         flex-direction: column;
@@ -67,15 +69,17 @@
 
 
     #select h1 {
-        font: 10px 'Inter';
+        font: 15px 'Inter';
         font-weight: 1000;
         margin: 0px 5px;
         color: #383838;
+        width: 100px;
     }
 
     .off {
         display: flex;
         flex-direction: column;
+        justify-content: space-between;
         transition: width 0.3s ease, height 0.3s ease, opacity 1s ease;
         opacity: 0;
         height: 0;
@@ -84,7 +88,8 @@
     }
 
     .off a {
-        font: 8px "Inter";
+       
+        font: 15px "Inter";
         text-decoration: none;
         color: #000;
         transition: 0.3s;
@@ -104,12 +109,13 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        font: 10px "Inter";
+        font: 13.5px "Inter";
         font-family: 100;
         text-decoration: none;
         margin: 0px 5px;
         font-weight: 1000;
         color: #383838;
+        width: 290px;
     }
 
     .bttt img {
@@ -119,4 +125,4 @@
 
 }
 
-}
+}   
