--- a/site/src/pages/adm/adm-listar-produtos/index.scss
+++ b/site/src/pages/adm/adm-listar-produtos/index.scss
@@ -83,7 +83,7 @@
         border: none;
     }
 
-    .box button {
+    .box a {
         background-color: transparent;
         border: none;
         outline: none;
