--- a/site/src/pages/adm/adm-listar-produtos/index.scss
+++ b/site/src/pages/adm/adm-listar-produtos/index.scss
@@ -44,7 +44,7 @@
     }
 
     .box tr {
-        border-bottom: 1px solid #3D3D3D;
+        border-bottom: 1px solid #3D3D3D !important;
     }
 
     .tcabeca th {
