--- a/site/src/pages/adm/adm-editar-produtos/index.scss
+++ b/site/src/pages/adm/adm-editar-produtos/index.scss
@@ -111,18 +111,22 @@
     .rightside div {
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        flex-wrap: wrap;
         gap: 20px;
         margin: 10px 0px;
     }
 
     .rightside img {
         width: auto;
+        min-width: 88px;
         height: 88px;
         border: 1px solid #545454;
         border-radius: 5px;
     }
 
     #capa1 {
+        min-width: 171px;
         width: auto;
         height: 171px;
     }
