--- a/site/src/components/site/rodape/index.scss
+++ b/site/src/components/site/rodape/index.scss
@@ -31,6 +31,14 @@
         color: #666666;
     }
 
+    #colunas{
+        display:flex ;
+        flex-direction: row;
+        justify-content: space-around;
+        width: 60vw;
+
+    }
+
     #ltblock {
         display: flex;
         flex-direction: column;
@@ -57,9 +65,33 @@
     }
 
     @media(max-width: 320px) {
-        #ltblock{
-            display: none;
 
+
+        h1 {
+            font: 14px 'Bebas Neue'; 
+        }
+
+        a {
+            font: 10px "Bebas Neue";
+        }
+
+        img {
+             height: 50px;
+             width: 50px;
+
+        }
+
+        .comp-rodape{
+            display: flex;
+            flex-direction: column !important;
+            height: 2000;
+        }
+        
+        #ltblock{
+
+            #logordp{
+            display: none;
+            }
         }
     }
 
