--- a/site/src/pages/site/pagamento/index.scss
+++ b/site/src/pages/site/pagamento/index.scss
@@ -169,7 +169,15 @@
 }
 
 @media(max-width: 320px) {
- .right_pag{
+    .endereco{
+        display: flex;
+        flex-direction: column;
+
+
+    }
+ 
+ 
+    .right_pag{
     display: none;
 
  }
