--- a/site/src/pages/site/pagamento/index.scss
+++ b/site/src/pages/site/pagamento/index.scss
@@ -5,6 +5,10 @@
         flex-direction: row;
         justify-content: space-between;
         margin: 0px;
+        a{
+            text-decoration: none;
+        
+        }
 
         .left_pag{
             width: 62vw;
